Fix horizontal overflow
Plus minor formatting fixes

--- a/src/css/components/_alert.scss
+++ b/src/css/components/_alert.scss
@@ -8,7 +8,7 @@
     width: $master-width;
     height: $master-height;
     margin: 25px;
-    z-index:1001;
+    z-index: 1001;
 }
 
 .alertModal {
@@ -26,8 +26,7 @@
     outline: none;
     padding: 20px;
     width: 85%;
-
-  }
+}
 
 
 .alert{
@@ -93,6 +92,7 @@
     text-align: center;
     p {
         overflow: hidden;
+        max-width: 100%;
     }
 }
 
@@ -121,7 +121,9 @@
     overflow: hidden;
     //align-self: flex-start;
     p {
-        height: 100%;
+        max-height: 100%;
+        max-width: 100%;
+        overflow: hidden;
     }
 
     @include display(flex);
@@ -138,7 +140,9 @@
     border-style: solid;
     margin: 15px;
     p {
-        height: 100%;
+        max-height: 100%;
+        max-width: 100%;
+        overflow: hidden;
     }
 
     @include display(flex);
@@ -157,7 +161,9 @@
     margin: 15px;
     overflow: hidden;
     p {
-        height: 100%;
+        max-height: 100%;
+        max-width: 100%;
+        overflow: hidden;
     }
 
     @include display(flex);
@@ -179,7 +185,9 @@
         min-width: 50px;
     }
     p {
-        height: 100%;
+        max-height: 100%;
+        max-width: 100%;
+        overflow: hidden;
     }
 
     @include display(flex);
